read and write data to firm works

--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -92,10 +92,10 @@ CAPTION "Joy-BlueTooth"
 FONT 9, "宋体"
 BEGIN
     DEFPUSHBUTTON   "确定",ID_TEST_DO,365,335,54,14
-    PUSHBUTTON      "保存日志",ID_CANCEL,523,326,54,14
+    PUSHBUTTON      "保存日志",ID_CANCEL,652,325,54,14
     CONTROL         "",IDC_RICHEDIT_OUTINFO,"RICHEDIT",ES_MULTILINE | 
-                    WS_BORDER | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP,313,25,
-                    160,261
+                    ES_AUTOHSCROLL | WS_BORDER | WS_VSCROLL | WS_HSCROLL | 
+                    WS_TABSTOP,313,25,183,261
     CONTROL         "端口01",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,5,25,35,10
     CONTROL         "端口02",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | 
@@ -262,9 +262,9 @@ BEGIN
     EDITTEXT        IDC_EDIT_GLOBAL_NAME,44,297,100,14,ES_AUTOHSCROLL
     LTEXT           "烧录文件",IDC_STATIC,184,299,33,8
     LTEXT           "蓝牙名称",IDC_STATIC,7,299,33,8
-    PUSHBUTTON      "统一设置",IDC_BUTTON_GLOBAL_SETTING,77,331,40,30
     LTEXT           "校频结果",IDC_STATIC_FREQ_TITLE,534,5,50,10
     LTEXT           "烧录日志",IDC_STATIC,369,5,55,8
+    PUSHBUTTON      "写入和检查",IDC_BUTTON_WRITECHECK,508,331,50,14
 END
 
 
