--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -162,40 +162,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_DID16,48,277,70,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "烧录端口",IDC_STATIC,8,5,33,8
     LTEXT           "USB SPI",IDC_STATIC,63,5,29,8
-    LTEXT           "蓝牙名称",IDC_STATIC,699,15,33,8
     LTEXT           "蓝牙地址",IDC_STATIC,142,5,33,8
-    EDITTEXT        IDC_EDIT_BD_NAME1,680,35,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME2,680,51,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME3,680,65,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME4,680,81,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME5,680,97,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME6,680,113,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME7,680,130,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME8,680,145,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME9,680,164,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME10,680,182,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME11,680,199,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME12,680,216,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME13,680,233,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME14,680,253,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME15,680,270,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
-    EDITTEXT        IDC_EDIT_BD_NAME16,680,285,60,14,ES_AUTOHSCROLL | 
-                    ES_READONLY
     EDITTEXT        IDC_EDIT_BD_ADDR1,127,25,60,14,ES_AUTOHSCROLL | 
                     ES_READONLY
     EDITTEXT        IDC_EDIT_BD_ADDR2,127,40,60,14,ES_AUTOHSCROLL | 
@@ -265,6 +232,10 @@ BEGIN
     LTEXT           "校频结果",IDC_STATIC_FREQ_TITLE,534,5,50,10
     LTEXT           "烧录日志",IDC_STATIC,369,5,55,8
     PUSHBUTTON      "写入和检查",IDC_BUTTON_WRITECHECK,508,331,50,14
+    PUSHBUTTON      "按键测试1",IDC_BUTTON_HARDBTN1,681,91,50,14
+    PUSHBUTTON      "按键测试2",IDC_BUTTON_HARDBTN2,685,136,50,14
+    PUSHBUTTON      "按键测试3",IDC_BUTTON_HARDBTN3,685,179,50,14
+    PUSHBUTTON      "按键测试4",IDC_BUTTON_HARDBTN4,680,225,50,14
 END
 
 
