--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -91,8 +91,8 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Joy-BlueTooth"
 FONT 9, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "确定",ID_TEST_DO,365,335,54,14
-    PUSHBUTTON      "保存日志",ID_CANCEL,652,325,54,14
+    DEFPUSHBUTTON   "确定",ID_TEST_DO,657,299,54,14
+    PUSHBUTTON      "保存日志",ID_CANCEL,658,331,54,14
     CONTROL         "",IDC_RICHEDIT_OUTINFO,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOHSCROLL | WS_BORDER | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP,313,25,183,261
@@ -223,19 +223,27 @@ BEGIN
                     ES_READONLY
     EDITTEXT        IDC_EDIT_CVC16,195,277,105,14,ES_AUTOHSCROLL | 
                     ES_READONLY
-    PUSHBUTTON      "烧录文件",IDC_BUTTON_BURN,264,336,54,14
-    PUSHBUTTON      "准备",IDC_BUTTON_DETECTDEVICE,173,338,54,14
+    PUSHBUTTON      "(2)烧录文件",IDC_BUTTON_BURN,630,82,76,14,BS_LEFT
+    PUSHBUTTON      "(1)准备",IDC_BUTTON_DETECTDEVICE,630,58,76,14,BS_LEFT
     EDITTEXT        IDC_EDIT_GLOBAL_FILE,218,297,227,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_GLOBAL_NAME,44,297,100,14,ES_AUTOHSCROLL
     LTEXT           "烧录文件",IDC_STATIC,184,299,33,8
     LTEXT           "蓝牙名称",IDC_STATIC,7,299,33,8
     LTEXT           "校频结果",IDC_STATIC_FREQ_TITLE,534,5,50,10
     LTEXT           "烧录日志",IDC_STATIC,369,5,55,8
-    PUSHBUTTON      "写入和检查",IDC_BUTTON_WRITECHECK,508,331,50,14
-    PUSHBUTTON      "按键测试1",IDC_BUTTON_HARDBTN1,681,91,50,14
-    PUSHBUTTON      "按键测试2",IDC_BUTTON_HARDBTN2,685,136,50,14
-    PUSHBUTTON      "按键测试3",IDC_BUTTON_HARDBTN3,685,179,50,14
-    PUSHBUTTON      "按键测试4",IDC_BUTTON_HARDBTN4,680,225,50,14
+    PUSHBUTTON      "(3)写入和检查",IDC_BUTTON_WRITECHECK,630,105,76,14,
+                    BS_LEFT
+    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,642,203,40,14,WS_GROUP
+    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,691,203,40,14,WS_GROUP
+    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,691,225,40,14,WS_GROUP
+    PUSHBUTTON      "开始测试",IDC_BUTTON_HARDBTNBEGIN,594,177,40,14,
+                    WS_GROUP
+    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,691,177,40,14,WS_GROUP
+    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,642,177,40,14,WS_GROUP
+    PUSHBUTTON      "所有按键",IDC_BUTTON_HARDBTNALL,594,203,40,14,WS_GROUP
+    GROUPBOX        "按键测试",IDC_STATIC,583,159,164,93,WS_GROUP
+    GROUPBOX        "烧录",IDC_STATIC,587,38,145,95
+    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,642,225,40,14
 END
 
 
