--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -91,7 +91,7 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Joy-BlueTooth"
 FONT 9, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "确定",ID_TEST_DO,657,299,54,14
+    DEFPUSHBUTTON   "(6)批次测试完成，给出结论",ID_TEST_DO,586,275,160,20
     PUSHBUTTON      "保存日志",ID_CANCEL,658,331,54,14
     CONTROL         "",IDC_RICHEDIT_OUTINFO,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOHSCROLL | WS_BORDER | WS_VSCROLL | WS_HSCROLL | 
@@ -229,21 +229,21 @@ BEGIN
     EDITTEXT        IDC_EDIT_GLOBAL_NAME,44,297,100,14,ES_AUTOHSCROLL
     LTEXT           "烧录文件",IDC_STATIC,184,299,33,8
     LTEXT           "蓝牙名称",IDC_STATIC,7,299,33,8
-    LTEXT           "校频结果",IDC_STATIC_FREQ_TITLE,534,5,50,10
+    LTEXT           "是否合格",IDC_STATIC_FREQ_TITLE,534,5,50,10
     LTEXT           "烧录日志",IDC_STATIC,369,5,55,8
     PUSHBUTTON      "(3)写入和检查",IDC_BUTTON_WRITECHECK,630,105,76,14,
                     BS_LEFT
-    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,642,203,40,14,WS_GROUP
-    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,691,203,40,14,WS_GROUP
-    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,691,225,40,14,WS_GROUP
-    PUSHBUTTON      "开始测试",IDC_BUTTON_HARDBTNBEGIN,594,177,40,14,
+    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,642,203,45,14,WS_GROUP
+    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,691,203,45,14,WS_GROUP
+    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,691,225,45,14,WS_GROUP
+    PUSHBUTTON      "(4)开始",IDC_BUTTON_HARDBTNBEGIN,594,177,45,14,WS_GROUP
+    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,691,177,45,14,WS_GROUP
+    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,642,177,45,14,WS_GROUP
+    PUSHBUTTON      "(5)所有按键",IDC_BUTTON_HARDBTNALL,594,203,44,14,
                     WS_GROUP
-    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,691,177,40,14,WS_GROUP
-    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,642,177,40,14,WS_GROUP
-    PUSHBUTTON      "所有按键",IDC_BUTTON_HARDBTNALL,594,203,40,14,WS_GROUP
     GROUPBOX        "按键测试",IDC_STATIC,583,159,164,93,WS_GROUP
     GROUPBOX        "烧录",IDC_STATIC,587,38,145,95
-    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,642,225,40,14
+    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,642,225,45,14
 END
 
 
