--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -85,14 +85,14 @@ BEGIN
     DEFPUSHBUTTON   "确定",IDOK,178,7,50,14,WS_GROUP
 END
 
-IDD_BLUETOOLTESTFORJOY_DIALOG DIALOGEX 0, 0, 757, 367
+IDD_BLUETOOLTESTFORJOY_DIALOG DIALOGEX 0, 0, 791, 373
 STYLE DS_MODALFRAME | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Joy-BlueTooth"
 FONT 9, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "(6)批次测试完成，给出结论",ID_TEST_DO,586,275,160,20
-    PUSHBUTTON      "保存日志",ID_CANCEL,658,331,54,14
+    DEFPUSHBUTTON   "(6)批次测试完成，给出结论",ID_TEST_DO,613,275,160,20
+    PUSHBUTTON      "保存日志",ID_CANCEL,685,331,54,14
     CONTROL         "",IDC_RICHEDIT_OUTINFO,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOHSCROLL | WS_BORDER | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP,313,25,183,261
@@ -128,22 +128,22 @@ BEGIN
                     WS_TABSTOP,5,262,35,10
     CONTROL         "端口16",IDC_CHECK16,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,5,280,35,10
-    LTEXT           "...",IDC_STATIC_RESULT1,532,25,50,9
-    LTEXT           "...",IDC_STATIC_RESULT2,532,40,50,9
-    LTEXT           "...",IDC_STATIC_RESULT3,532,55,50,9
-    LTEXT           "...",IDC_STATIC_RESULT4,532,71,49,9
-    LTEXT           "...",IDC_STATIC_RESULT5,532,87,50,9
-    LTEXT           "...",IDC_STATIC_RESULT6,532,103,50,9
-    LTEXT           "...",IDC_STATIC_RESULT7,532,120,50,9
-    LTEXT           "...",IDC_STATIC_RESULT8,532,137,50,9
-    LTEXT           "...",IDC_STATIC_RESULT9,532,154,50,9
-    LTEXT           "...",IDC_STATIC_RESULT10,532,173,50,9
-    LTEXT           "...",IDC_STATIC_RESULT11,532,189,50,9
-    LTEXT           "...",IDC_STATIC_RESULT12,532,207,50,9
-    LTEXT           "...",IDC_STATIC_RESULT13,532,226,50,9
-    LTEXT           "...",IDC_STATIC_RESULT14,532,244,50,9
-    LTEXT           "...",IDC_STATIC_RESULT15,532,259,50,9
-    LTEXT           "...",IDC_STATIC_RESULT16,532,277,50,9
+    LTEXT           "",IDC_STATIC_RESULT1,520,25,65,9
+    LTEXT           "",IDC_STATIC_RESULT2,520,40,65,9
+    LTEXT           "",IDC_STATIC_RESULT3,520,55,65,9
+    LTEXT           "",IDC_STATIC_RESULT4,520,71,65,9
+    LTEXT           "",IDC_STATIC_RESULT5,520,87,65,9
+    LTEXT           "",IDC_STATIC_RESULT6,520,103,65,9
+    LTEXT           "",IDC_STATIC_RESULT7,520,120,65,9
+    LTEXT           "",IDC_STATIC_RESULT8,520,137,65,9
+    LTEXT           "",IDC_STATIC_RESULT9,520,154,65,9
+    LTEXT           "",IDC_STATIC_RESULT10,520,173,65,9
+    LTEXT           "",IDC_STATIC_RESULT11,520,189,65,9
+    LTEXT           "",IDC_STATIC_RESULT12,520,207,65,9
+    LTEXT           "",IDC_STATIC_RESULT13,520,226,65,9
+    LTEXT           "",IDC_STATIC_RESULT14,520,244,65,9
+    LTEXT           "",IDC_STATIC_RESULT15,520,259,65,9
+    LTEXT           "",IDC_STATIC_RESULT16,520,277,65,9
     EDITTEXT        IDC_EDIT_DID1,48,25,70,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_EDIT_DID2,48,40,70,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_EDIT_DID3,48,55,70,14,ES_AUTOHSCROLL | ES_READONLY
@@ -223,27 +223,27 @@ BEGIN
                     ES_READONLY
     EDITTEXT        IDC_EDIT_CVC16,195,277,105,14,ES_AUTOHSCROLL | 
                     ES_READONLY
-    PUSHBUTTON      "(2)烧录文件",IDC_BUTTON_BURN,630,82,76,14,BS_LEFT
-    PUSHBUTTON      "(1)准备",IDC_BUTTON_DETECTDEVICE,630,58,76,14,BS_LEFT
+    PUSHBUTTON      "(2)烧录文件",IDC_BUTTON_BURN,641,82,76,14,BS_LEFT
+    PUSHBUTTON      "(1)准备",IDC_BUTTON_DETECTDEVICE,641,58,76,14,BS_LEFT
     EDITTEXT        IDC_EDIT_GLOBAL_FILE,218,297,227,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_GLOBAL_NAME,44,297,100,14,ES_AUTOHSCROLL
     LTEXT           "烧录文件",IDC_STATIC,184,299,33,8
     LTEXT           "蓝牙名称",IDC_STATIC,7,299,33,8
-    LTEXT           "是否合格",IDC_STATIC_FREQ_TITLE,534,5,50,10
+    LTEXT           "是否合格",IDC_STATIC_FREQ_TITLE,520,5,50,10
     LTEXT           "烧录日志",IDC_STATIC,369,5,55,8
-    PUSHBUTTON      "(3)写入和检查",IDC_BUTTON_WRITECHECK,630,105,76,14,
+    PUSHBUTTON      "(3)写入和检查",IDC_BUTTON_WRITECHECK,641,105,76,14,
                     BS_LEFT
-    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,642,203,45,14,WS_GROUP
-    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,691,203,45,14,WS_GROUP
-    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,691,225,45,14,WS_GROUP
-    PUSHBUTTON      "(4)开始",IDC_BUTTON_HARDBTNBEGIN,594,177,45,14,WS_GROUP
-    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,691,177,45,14,WS_GROUP
-    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,642,177,45,14,WS_GROUP
-    PUSHBUTTON      "(5)所有按键",IDC_BUTTON_HARDBTNALL,594,203,44,14,
+    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,669,203,45,14,WS_GROUP
+    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,718,203,45,14,WS_GROUP
+    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,718,225,45,14,WS_GROUP
+    PUSHBUTTON      "(4)开始",IDC_BUTTON_HARDBTNBEGIN,621,177,45,14,WS_GROUP
+    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,718,177,45,14,WS_GROUP
+    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,669,177,45,14,WS_GROUP
+    PUSHBUTTON      "(5)所有按键",IDC_BUTTON_HARDBTNALL,621,203,44,14,
                     WS_GROUP
-    GROUPBOX        "按键测试",IDC_STATIC,583,159,164,93,WS_GROUP
-    GROUPBOX        "烧录",IDC_STATIC,587,38,145,95
-    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,642,225,45,14
+    GROUPBOX        "按键测试",IDC_STATIC,610,159,164,93,WS_GROUP
+    GROUPBOX        "烧录",IDC_STATIC,610,38,164,93
+    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,669,225,45,14
 END
 
 
