push socket client singleton

--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -82,7 +82,7 @@ BEGIN
     LTEXT           "BlueToolTestforJoy 1.0 版",IDC_STATIC,40,10,119,8,
                     SS_NOPREFIX
     LTEXT           "版权所有 (C) 2014",IDC_STATIC,40,25,119,8
-    DEFPUSHBUTTON   "确定",IDOK,178,7,50,14,WS_GROUP
+    DEFPUSHBUTTON   "确定",ID_BTN_GOTOADMIN,178,7,50,14,WS_GROUP
 END
 
 IDD_BLUETOOLTESTFORJOY_DIALOG DIALOGEX 0, 0, 791, 373
@@ -244,6 +244,28 @@ BEGIN
     GROUPBOX        "按键测试",IDC_STATIC,610,159,164,93,WS_GROUP
     GROUPBOX        "烧录",IDC_STATIC,610,38,164,93
     PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,669,225,45,14
+END
+
+IDD_DIALOG_ADMIN DIALOG DISCARDABLE  0, 0, 311, 185
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "增加测试账号"
+FONT 10, "System"
+BEGIN
+    PUSHBUTTON      "增加账号",IDC_BUTTON_ADD,178,107,50,12
+    RTEXT           "工号:",IDC_STATIC,21,84,34,8
+    EDITTEXT        IDC_EDIT1,67,81,80,12,ES_AUTOHSCROLL
+    RTEXT           "账号密码:",IDC_STATIC,24,104,35,8
+    EDITTEXT        IDC_EDIT_PWD,67,101,80,12,ES_PASSWORD | ES_AUTOHSCROLL
+    LTEXT           "管理员账号",IDC_STATIC,21,29,41,8
+    LTEXT           "管理员密码",IDC_STATIC,157,28,41,8
+    EDITTEXT        IDC_EDIT3,66,27,80,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT4,204,26,80,12,ES_PASSWORD | ES_AUTOHSCROLL
+    PUSHBUTTON      "修改密码",IDC_BUTTON2,175,82,50,12
+    RTEXT           "确认密码:",IDC_STATIC,23,124,35,8
+    GROUPBOX        "管理员",IDC_STATIC,11,16,286,30
+    EDITTEXT        IDC_EDIT_COMFIRMPWD,67,122,80,12,ES_PASSWORD | 
+                    ES_AUTOHSCROLL
+    GROUPBOX        "测试账号",IDC_STATIC,11,70,286,81
 END
 
 
