client json parser...add test account...

--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -246,26 +246,28 @@ BEGIN
     PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,669,225,45,14
 END
 
-IDD_DIALOG_ADMIN DIALOG DISCARDABLE  0, 0, 311, 185
+IDD_DIALOG_ADMIN DIALOG DISCARDABLE  0, 0, 305, 185
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "增加测试账号"
 FONT 10, "System"
 BEGIN
-    PUSHBUTTON      "增加账号",IDC_BUTTON_ADD,178,107,50,12
-    RTEXT           "工号:",IDC_STATIC,21,84,34,8
-    EDITTEXT        IDC_EDIT1,67,81,80,12,ES_AUTOHSCROLL
-    RTEXT           "账号密码:",IDC_STATIC,24,104,35,8
-    EDITTEXT        IDC_EDIT_PWD,67,101,80,12,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ADMINNAME,66,27,80,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ADMINPWD,204,26,80,12,ES_PASSWORD | 
+                    ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_TESTORNAME,67,85,80,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PWD,67,105,80,12,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_COMFIRMPWD,67,126,80,12,ES_PASSWORD | 
+                    ES_AUTOHSCROLL
+    PUSHBUTTON      "修改密码",IDC_BUTTON2,180,86,50,12
+    PUSHBUTTON      "增加账号",IDC_BUTTON_ADD,180,111,50,12
+    RTEXT           "工号:",IDC_STATIC,21,88,34,8
+    RTEXT           "账号密码:",IDC_STATIC,24,108,35,8
     LTEXT           "管理员账号",IDC_STATIC,21,29,41,8
     LTEXT           "管理员密码",IDC_STATIC,157,28,41,8
-    EDITTEXT        IDC_EDIT3,66,27,80,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT4,204,26,80,12,ES_PASSWORD | ES_AUTOHSCROLL
-    PUSHBUTTON      "修改密码",IDC_BUTTON2,175,82,50,12
-    RTEXT           "确认密码:",IDC_STATIC,23,124,35,8
+    RTEXT           "确认密码:",IDC_STATIC,23,128,35,8
     GROUPBOX        "管理员",IDC_STATIC,11,16,286,30
-    EDITTEXT        IDC_EDIT_COMFIRMPWD,67,122,80,12,ES_PASSWORD | 
-                    ES_AUTOHSCROLL
     GROUPBOX        "测试账号",IDC_STATIC,11,70,286,81
+    CTEXT           "",IDC_STATIC_ADDRESULT,54,159,189,8
 END
 
 
