change testor pwd interface finished.

--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -258,7 +258,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_PWD,67,105,80,12,ES_PASSWORD | ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_COMFIRMPWD,67,126,80,12,ES_PASSWORD | 
                     ES_AUTOHSCROLL
-    PUSHBUTTON      "修改密码",IDC_BUTTON2,180,86,50,12
+    PUSHBUTTON      "修改密码",IDC_BUTTON_CHANGPWD,180,86,50,12
     PUSHBUTTON      "增加账号",IDC_BUTTON_ADD,180,111,50,12
     RTEXT           "工号:",IDC_STATIC,21,88,34,8
     RTEXT           "账号密码:",IDC_STATIC,24,108,35,8
