--- a/BlueToolTestforJoy/BlueToolTestforJoy.rc
+++ b/BlueToolTestforJoy/BlueToolTestforJoy.rc
@@ -91,7 +91,7 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Joy-BlueTooth"
 FONT 9, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "(6)批次测试完成，给出结论",ID_TEST_DO,613,275,160,20
+    DEFPUSHBUTTON   "(6)批次测试完成，给出结论",ID_TEST_DO,611,301,160,20
     PUSHBUTTON      "保存日志",ID_CANCEL,685,331,54,14
     CONTROL         "",IDC_RICHEDIT_OUTINFO,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOHSCROLL | WS_BORDER | WS_VSCROLL | WS_HSCROLL | 
@@ -223,27 +223,35 @@ BEGIN
                     ES_READONLY
     EDITTEXT        IDC_EDIT_CVC16,195,277,105,14,ES_AUTOHSCROLL | 
                     ES_READONLY
-    PUSHBUTTON      "(2)烧录文件",IDC_BUTTON_BURN,641,82,76,14,BS_LEFT
-    PUSHBUTTON      "(1)准备",IDC_BUTTON_DETECTDEVICE,641,58,76,14,BS_LEFT
+    PUSHBUTTON      "(2)烧录文件",IDC_BUTTON_BURN,645,65,76,14,BS_LEFT
+    PUSHBUTTON      "(1)准备",IDC_BUTTON_DETECTDEVICE,645,41,76,14,BS_LEFT
     EDITTEXT        IDC_EDIT_GLOBAL_FILE,218,297,227,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_GLOBAL_NAME,44,297,100,14,ES_AUTOHSCROLL
     LTEXT           "烧录文件",IDC_STATIC,184,299,33,8
     LTEXT           "蓝牙名称",IDC_STATIC,7,299,33,8
     LTEXT           "是否合格",IDC_STATIC_FREQ_TITLE,520,5,50,10
     LTEXT           "烧录日志",IDC_STATIC,369,5,55,8
-    PUSHBUTTON      "(3)写入和检查",IDC_BUTTON_WRITECHECK,641,105,76,14,
+    PUSHBUTTON      "(3)写入和检查",IDC_BUTTON_WRITECHECK,645,89,76,14,
                     BS_LEFT
-    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,669,203,45,14,WS_GROUP
-    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,718,203,45,14,WS_GROUP
-    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,718,225,45,14,WS_GROUP
-    PUSHBUTTON      "(4)开始",IDC_BUTTON_HARDBTNBEGIN,621,177,45,14,WS_GROUP
-    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,718,177,45,14,WS_GROUP
-    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,669,177,45,14,WS_GROUP
-    PUSHBUTTON      "(5)所有按键",IDC_BUTTON_HARDBTNALL,621,203,44,14,
+    PUSHBUTTON      "音量-",IDC_BUTTON_HARDBTN1,673,163,45,14,WS_GROUP
+    PUSHBUTTON      "音量+",IDC_BUTTON_HARDBTN2,721,163,45,14,WS_GROUP
+    PUSHBUTTON      "消息",IDC_BUTTON_HARDBTN3,721,185,45,14,WS_GROUP
+    PUSHBUTTON      "(4)开始",IDC_BUTTON_HARDBTNBEGIN,625,137,45,14,WS_GROUP
+    PUSHBUTTON      "下一个",IDC_BUTTON_NEXTDC,721,137,45,14,WS_GROUP
+    PUSHBUTTON      "上一个",IDC_BUTTON_FORMER,673,137,45,14,WS_GROUP
+    PUSHBUTTON      "(5)所有按键",IDC_BUTTON_HARDBTNALL,625,163,44,14,
                     WS_GROUP
-    GROUPBOX        "按键测试",IDC_STATIC,610,159,164,93,WS_GROUP
-    GROUPBOX        "烧录",IDC_STATIC,610,38,164,93
-    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,669,225,45,14
+    GROUPBOX        "按键测试",IDC_STATIC,613,119,164,93,WS_GROUP
+    GROUPBOX        "烧录",IDC_STATIC,613,21,164,93
+    PUSHBUTTON      "呼叫",IDC_BUTTON_CALL,673,185,45,14
+    LTEXT           "测试账号",IDC_STATIC,5,327,33,8
+    EDITTEXT        IDC_EDIT_TESTORID,43,323,66,14,ES_AUTOHSCROLL
+    LTEXT           "密码",IDC_STATIC,135,326,17,8
+    EDITTEXT        IDC_EDIT_PWD,160,323,75,14,ES_PASSWORD | ES_AUTOHSCROLL
+    PUSHBUTTON      "获取mac/cvc",IDC_BUTTON_REQMACCVC,718,237,48,16
+    GROUPBOX        "Static",IDC_STATIC,614,221,161,47
+    LTEXT           "mac/cvc剩余数",IDC_STATIC,621,241,53,8
+    LTEXT           "1000",IDC_STATIC_LEFTMACCVC,679,241,19,8
 END
 
 IDD_DIALOG_ADMIN DIALOG DISCARDABLE  0, 0, 305, 185
